# Eclipsera-Engine

./: .gitignore  README.md
eclipsera-engine/: CMakeLists.txt  INSTALLATION.bat  eclipsera-engine.rc
eclipsera-engine/bootstrap/: Game.cpp  Instance.cpp  Instance.h  LuaScheduler.cpp  Renderer.cpp  ScriptingAPI.cpp  main.cpp
eclipsera-engine/bootstrap/services/: RunService.cpp  RunService.h  UserInputService.cpp  UserInputService.h
eclipsera-engine/bootstrap/shaders/: shaders.h  sky.h
eclipsera-engine/bootstrap/signals/: Signal.cpp  Signal.h
eclipsera-engine/core/datatypes/: Enum.cpp  Enum.h  Vector3Game.cpp  Vector3Game.h
